# finviz-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  setup.py
.github/workflows/: watchlist-telegram.yml
scripts/: telegram_sender.py  watchlist_cli.py
skill-watchlist/: ENHANCEMENTS.md  SKILL.md  TODO.md
tests/: test_insider.py
tools/: group.py  insider.py  quote.py  screener.py
